force-app/main/default/objects/Krow__Expense_Krow__c/Krow__Expense_Krow__c.object-meta.xml
<CustomObject>
    <label>My Expense</label>
    <nameField>
        <displayFormat>E{00000000}</displayFormat>
        <label>Expense Report</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>My Expenses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>