force-app/main/default/objects/Krow__Expense_Krow__c/fields/Krow__Billable_Total__c.field-meta.xml
<CustomField>
    <fullName>Krow__Billable_Total__c</fullName>
    <label>Billable Total</label>
    <summarizedField>Krow__Expense_Line__c.Krow__Expense_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Krow__Expense_Line__c.Krow__Billable__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Krow__Expense_Line__c.Krow__Expense__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>