force-app/main/default/objects/Krow__Expense_Krow__c/fields/Krow__Expense_Description__c.field-meta.xml
<CustomField>
    <fullName>Krow__Expense_Description__c</fullName>
    <label>Expense Description</label>
    <type>TextArea</type>
</CustomField>