force-app/main/default/objects/Krow__Expense_Krow__c/fields/Krow__Expense_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Expense_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Expense External Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>