force-app/main/default/objects/Krow__Expense_Krow__c/fields/Krow__Expense_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Expense_Report_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Expense Report Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>