force-app/main/default/objects/Krow__Expense_Krow__c/fields/Krow__Expense_Total__c.field-meta.xml
<CustomField>
    <fullName>Krow__Expense_Total__c</fullName>
    <label>Expense Total</label>
    <summarizedField>Krow__Expense_Line__c.Krow__Expense_Amount__c</summarizedField>
    <summaryForeignKey>Krow__Expense_Line__c.Krow__Expense__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>