force-app/main/default/objects/Krow__Expense_Krow__c/fields/Krow__Intacct_Expense_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Intacct_Expense_Id__c</fullName>
    <description>This holding the Intacct record id.</description>
    <label>Intacct Expense Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>