force-app/main/default/objects/Krow__Expense_Krow__c/fields/Krow__Krow_Project__c.field-meta.xml
<CustomField>
    <fullName>Krow__Krow_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>