force-app/main/default/objects/Krow__Expense_Krow__c/fields/Krow__Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>Krow__Expense_Line__c.Krow__Total_Amount__c</summarizedField>
    <summaryForeignKey>Krow__Expense_Line__c.Krow__Expense__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>