force-app/main/default/objects/Krow__Expense_Krow__c/fields/Krow__Xero_Expense_Claim_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Xero_Expense_Claim_Id__c</fullName>
    <label>Xero Id</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>