force-app/main/default/objects/Krow__Expense_Krow__c/listViews/Krow__All.listView-meta.xml
<ListView>
    <fullName>Krow__All</fullName>
    <columns>NAME</columns>
    <columns>Krow__Expense_Report_Date__c</columns>
    <columns>Krow__Expense_Description__c</columns>
    <columns>Krow__Expense_Total__c</columns>
    <columns>Krow__Approval_Status__c</columns>
    <columns>Krow__Krow_Project__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>