force-app/main/default/objects/Krow__Expense_Krow__c/listViews/Krow__Submitted.listView-meta.xml
<ListView>
    <fullName>Krow__Submitted</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>Krow__Project_Resource__c</columns>
    <columns>Krow__Expense_Total__c</columns>
    <columns>Krow__Total_Amount__c</columns>
    <columns>Krow__Krow_Project__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Krow__Approval_Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>LAST_N_WEEKS:4</value>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterThan</operation>
        <value>LAST_N_WEEKS:4</value>
    </filters>
    <label>Submitted</label>
</ListView>